Tidy up pageserver's endpoints
