# pageserver/src/http/openapi_spec.yml
@@ -22,7 +22,7 @@ paths:
                 properties:
                   id:
                     type: integer
-  /v1/timeline/{tenant_id}:
+  /v1/tenant/{tenant_id}/timeline:
     parameters:
       - name: tenant_id
         in: path
@@ -70,7 +70,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /v1/timeline/{tenant_id}/{timeline_id}:
+  /v1/tenant/{tenant_id}/timeline/{timeline_id}:
     parameters:
       - name: tenant_id
         in: path
@@ -90,7 +90,7 @@ paths:
           type: string
           description: Controls calculation of current_logical_size_non_incremental
     get:
-      description: Get timelines for tenant
+      description: Get info about the timeline
       responses:
         "200":
           description: TimelineInfo
@@ -122,7 +122,14 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /v1/timeline/:
+  /v1/tenant/{tenant_id}/timeline/:
+    parameters:
+      - name: tenant_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: hex
     post:
       description: Create timeline
       requestBody:
@@ -130,18 +137,14 @@ paths:
           application/json:
             schema:
               type: object
-              required:
-                - "tenant_id"
-                - "timeline_id"
-                - "start_point"
               properties:
-                tenant_id:
+                new_timeline_id:
                   type: string
                   format: hex
-                timeline_id:
+                ancestor_timeline_id:
                   type: string
                   format: hex
-                start_point:
+                ancestor_start_lsn:
                   type: string
       responses:
         "201":
@@ -149,7 +152,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TImelineInfo"
+                $ref: "#/components/schemas/TimelineInfo"
         "400":
           description: Malformed timeline create request
           content:
@@ -211,10 +214,11 @@ paths:
           application/json:
             schema:
               type: object
-              required:
-                - "tenant_id"
               properties:
-                tenant_id:
+                new_tenant_id:
+                  type: string
+                  format: hex
+                initial_timeline_id:
                   type: string
                   format: hex
       responses:
@@ -223,9 +227,14 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
+                type: object
+                properties:
+                  tenant_id:
+                    type: string
+                    format: hex
+                  timeline_id:
+                    type: string
+                    format: hex
         "400":
           description: Malformed tenant create request
           content:
@@ -272,31 +281,7 @@ components:
       type: object
       required:
         - timeline_id
-        - latest_valid_lsn
-        - current_logical_size
-      properties:
-        timeline_id:
-          type: string
-          format: hex
-        ancestor_id:
-          type: string
-          format: hex
-        ancestor_lsn:
-          type: string
-        current_logical_size:
-          type: integer
-        current_logical_size_non_incremental:
-          type: integer
-        latest_valid_lsn:
-          type: integer
-    TimelineInfo:
-      type: object
-      required:
-        - timeline_id
         - tenant_id
-        - last_record_lsn
-        - prev_record_lsn
-        - start_lsn
         - disk_consistent_lsn
       properties:
         timeline_id:
@@ -305,19 +290,21 @@ components:
         tenant_id:
           type: string
           format: hex
-        ancestor_timeline_id:
-          type: string
-          format: hex
         last_record_lsn:
           type: string
         prev_record_lsn:
           type: string
-        start_lsn:
+        ancestor_timeline_id:
+          type: string
+          format: hex
+        ancestor_lsn:
           type: string
         disk_consistent_lsn:
           type: string
-        timeline_state:
-          type: string
+        current_logical_size:
+          type: integer
+        current_logical_size_non_incremental:
+          type: integer
 
     Error:
       type: object
